<resources>
    <string name="app_name">HomeHead</string>
    <string name="default_notification_channel_id" />
    <string name="default_notification_channel_name" />
    <string name="button_start_listen">Enable Device Listening</string>
    <string name="start_device_listening">Start Device Listening</string>
    <string name="stop_device_listening">Stop Device Listening</string>
    <string name="title_listening_on_off">Listening On/Off</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_start_device_listening">Set HomeHead to Listen</string>
    <string name="start_listening">Enable Device Listening</string>
    <string name="stop_listening">Disable Device Listening</string>
    <string name="enable_device_active_listening_mode">Enable Device Active Listening</string>
    <string name="enter_device_info">Enter the Device Password to Proceed :</string>
    <string name="pi_device_id">Pi Device ID</string>
    <string name="enter_device_ip_address">Enter Device IP Address:</string>
    <string name="ip_address">IP Address</string>
    <string name="enter_device_password">Enter Device Password:</string>
    <string name="device_password">Device Password</string>
    <string name="disable_device_active_listening_mode">Disable Device Active Listening</string>
    <string name="customise_app_settings">Configure System</string>
    <string name="shutdown_system">Shutdown System</string>
    <string name="system_off_icon">System off icon</string>
    <string name="system_config_icon">system_config_icon</string>
    <string name="confirm_device_shutdown">Confirm Device Shutdown</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="error_login_msg">Input Fields Empty</string>
    <string name="shutdown_submit">Submit</string>
    <string name="shutdown_device">Shutdown Device</string>
    <string name="device_configuration_menu">Device Configuration Menu</string>
    <string name="add_edit_device_ip_address">Add / Edit Device ID and IP Address</string>
    <string name="calibrate_noise_trigger_levels">Calibrate Noise Trigger Levels</string>
    <string name="add_ip_address_title_text">Add Device ID and IP Address</string>
    <string name="add_ip_address_para1">Add the Device ID and IP Address of the Raspberry Pi to control it using this Android device.</string>
    <string name="add_ip_address_para2">Enter the IP address below to store it on this device :</string>
    <string name="add_ip_activity_ip_input">IP Address</string>
    <string name="get_ip_address_hint1">The IP address of the Raspberry Pi device (format example : 192.168.x.xxx) can be obtained by typing \"hostname -I\" into the command line of the device, or by using an app such as Fing (available for free from the Google Play store).</string>
    <string name="get_ip_address_hint2">Alternatively you can use an app such as Fing (available for free from the Google Play store) to obtain the IP Address.</string>
    <string name="textview_CurrentIpAdd">Add IP Address</string>
    <string name="current_ip_address_stored">Current IP Address Stored :</string>
    <string name="submit_btn_shutdown">Submit</string>
    <string name="ip_address_tooltip_icon">ip_address_tooltip_icon</string>
    <string name="calibrate_device_noise_trigger_levels">Calibrate Device Trigger Levels</string>
    <string name="calibrate_device">Calibrate Device</string>
    <string name="add_new_trigger_noise">Add New Trigger Noise</string>
    <string name="enter_a_description_of_the_noise_one_word_only">Enter a Description of the Noise (one word only)</string>
    <string name="noise_description">Noise Description</string>
    <string name="add_noise_record_icon">add_noise_record_icon</string>
    <string name="add_noise_save_icon">add_noise_save_icon</string>
    <string name="record_noise_phrase">Record Noise/Phrase</string>
    <string name="save_to_dictionary">Save to Dictionary</string>
    <string name="add_noise_tooltip_icon">add_noise_tooltip_icon</string>
    <string name="start_listening_icon">start_listening_icon</string>
    <string name="disable_listening_icon">disable_listening_icon</string>
    <string name="delete_saved_trigger_noises">Delete Saved Trigger Noises</string>
    <string name="delete_a_stored_trigger_noise">Delete Trigger Noise(s)</string>
    <string name="to_delete_a_specific_noise_enter_the_name_below">To delete a specific noise, enter the name below :</string>
    <string name="name_of_noise_to_delete">Name of Noise to Delete</string>
    <string name="delete_specific_noise">Delete Specific Noise</string>
    <string name="press_button_below_to_delete_all_stored_noises">Press Button Below to Delete ALL STORED NOISES</string>
    <string name="delete_all_stored_noises">Delete ALL Stored Noises</string>
    <string name="view_notifications_received">Notifications Received</string>
    <string name="notifications_received_icon">notifications_received_icon</string>
    <string name="notifications_received">Notifications Received</string>
    <string name="no_device_id_currently_stored">Add Device ID</string>
    <string name="device_id">Device ID</string>
    <string name="submit_ip_address">Submit IP Address</string>
    <string name="enter_the_device_id_below_to_store_it_on_this_device">Enter the device ID below to store it on this device :</string>
    <string name="submit_device_id">Submit Device ID</string>
    <string name="No_IP_Address">Add IP Address</string>
    <string name="no_device_id_added">Add Device ID</string>
    <string name="current_device_id_stored">Current Device ID Stored :</string>
    <string name="to_add_device_id_ip_address_or_a_new_trigger_noise_or_to_calibrate_background_noise_levels_and_delete_stored_trigger_noises">Add device ID, IP Address, or new trigger noise; Calibrate background noise levels; Delete stored trigger noises.</string>
    <string name="view_saved_trigger_noises">Saved Trigger Noises</string>
    <string name="view_saved_trigger_noises_btn">View Saved Trigger Noises</string>
    <string name="saved_trigger_noises">Saved Trigger Noises</string>
    <string name="noise">Noise</string>
    <string name="noise_saved">Noise Saved</string>
    <string name="view_setup_instruction_video">View Setup Instruction Video</string>
</resources>
