<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEditIPAddressDeviceIDActivity">

    <TextView
        android:id="@+id/add_IP_address_activ_title"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/add_ip_address_title_text"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_ip_address_description_text_para1"
        android:layout_width="338dp"
        android:layout_height="41dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/add_ip_address_para1"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_IP_address_activ_title" />

    <TextView
        android:id="@+id/add_ip_address_description_text_para2"
        android:layout_width="339dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_ip_address_para2"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_ip_address_description_text_para1" />

    <EditText
        android:id="@+id/input_add_IP_address"
        android:layout_width="214dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:ems="10"
        android:hint="@string/add_ip_activity_ip_input"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_ip_address_description_text_para2" />

    <Button
        android:id="@+id/add_ip_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:onClick="saveIpAddressData"
        android:text="@string/submit_ip_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_add_IP_address" />

    <TextView
        android:id="@+id/textView_current_IP_address"
        android:layout_width="114dp"
        android:layout_height="19dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/textview_CurrentIpAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_current_IP"
        app:layout_constraintTop_toBottomOf="@+id/textView_current_device_ID" />

    <TextView
        android:id="@+id/textView_current_IP"
        android:layout_width="175dp"
        android:layout_height="18dp"
        android:layout_marginBottom="23dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/current_ip_address_stored"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_current_device_ID_title"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/imgbtn_ip_address_tooltip"
        android:layout_width="31dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/ip_address_tooltip_icon"
        android:onClick="displayIpTooltip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/input_add_IP_address"
        app:layout_constraintTop_toBottomOf="@+id/add_ip_address_description_text_para2"
        app:srcCompat="@android:drawable/ic_menu_help" />

    <TextView
        android:id="@+id/textView_current_device_ID"
        android:layout_width="114dp"
        android:layout_height="19dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/no_device_id_currently_stored"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_current_device_ID_title"
        app:layout_constraintTop_toBottomOf="@+id/add_device_ID_submit_button" />

    <TextView
        android:id="@+id/enter_device_id_description_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/enter_the_device_id_below_to_store_it_on_this_device"
        android:textColor="@android:color/holo_green_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_ip_submit_button" />

    <EditText
        android:id="@+id/input_add_device_ID"
        android:layout_width="214dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:ems="10"
        android:hint="@string/device_id"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_device_id_description_textView" />

    <Button
        android:id="@+id/add_device_ID_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:onClick="saveDeviceIDData"
        android:text="@string/submit_device_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_add_device_ID" />

    <TextView
        android:id="@+id/textView_current_device_ID_title"
        android:layout_width="175dp"
        android:layout_height="19dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/current_device_id_stored"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_device_ID_submit_button" />


</android.support.constraint.ConstraintLayout>