<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/startListeningText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="42dp"
        android:text="@string/start_device_listening"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/mainmenu_start_listening_imgbtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stopListeningText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:text="@string/stop_device_listening"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/mainmenu_disable_listening_imgbtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startListeningText" />

    <TextView
        android:id="@+id/customiseSettingsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:text="@string/customise_app_settings"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stopListeningText" />

    <ImageButton
        android:id="@+id/buttomDeviceConfig"
        android:layout_width="61dp"
        android:layout_height="59dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/system_config_icon"
        android:tint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/customiseSettingsText"
        app:layout_constraintTop_toBottomOf="@+id/mainmenu_disable_listening_imgbtn"
        app:srcCompat="@android:drawable/ic_menu_preferences" />

    <TextView
        android:id="@+id/shutdownSystemText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:text="@string/shutdown_system"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonDeviceShutdown"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_notifications_textView" />

    <ImageButton
        android:id="@+id/buttonDeviceShutdown"
        android:layout_width="61dp"
        android:layout_height="59dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/system_off_icon"
        android:tint="#FF1744"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_notifications_imgbtn"
        app:srcCompat="@android:drawable/ic_lock_power_off" />

    <ImageButton
        android:id="@+id/mainmenu_start_listening_imgbtn"
        android:layout_width="61dp"
        android:layout_height="59dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="26dp"
        android:contentDescription="@string/start_listening_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_media_play" />

    <ImageButton
        android:id="@+id/mainmenu_disable_listening_imgbtn"
        android:layout_width="61dp"
        android:layout_height="59dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/disable_listening_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainmenu_start_listening_imgbtn"
        app:srcCompat="@android:drawable/ic_media_pause" />

    <TextView
        android:id="@+id/view_notifications_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:text="@string/view_notifications_received"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/view_notifications_imgbtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customiseSettingsText" />

    <ImageButton
        android:id="@+id/view_notifications_imgbtn"
        android:layout_width="61dp"
        android:layout_height="59dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/notifications_received_icon"
        app:layout_constraintTop_toBottomOf="@+id/buttomDeviceConfig"
        app:srcCompat="@android:drawable/ic_menu_info_details" />

</android.support.constraint.ConstraintLayout>