<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewTriggerNoiseActivity">

    <TextView
        android:id="@+id/calibrate_noise_activity_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/add_new_trigger_noise"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_name_label"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:text="@string/enter_a_description_of_the_noise_one_word_only"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calibrate_noise_activity_textview" />

    <EditText
        android:id="@+id/add_noise_name_textbox"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:ems="10"
        android:hint="@string/noise_description"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_name_label" />


    <TextView
        android:id="@+id/start_deviceInfo_label"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/enter_device_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_noise_name_textbox" />

    <EditText
        android:id="@+id/calibrate_device_deviceID_textbox"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:ems="10"
        android:hint="@string/pi_device_id"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_deviceInfo_label" />

    <EditText
        android:id="@+id/calibrate_device_device_PW_textbox"
        android:layout_width="250dp"
        android:layout_height="49dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:ems="10"
        android:hint="@string/device_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calibrate_device_deviceID_textbox" />

    <ImageButton
        android:id="@+id/add_noise_dictionary_imgBtn"
        android:layout_width="67dp"
        android:layout_height="61dp"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/add_noise_save_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calibrate_device_device_PW_textbox"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <ImageButton
        android:id="@+id/add_noise_speak_imgBtn"
        android:layout_width="67dp"
        android:layout_height="61dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/add_noise_record_icon"
        android:tint="#EF5350"
        app:layout_constraintEnd_toStartOf="@+id/add_noise_dictionary_imgBtn"
        app:layout_constraintHorizontal_bias="0.397"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calibrate_device_device_PW_textbox"
        app:srcCompat="@android:drawable/ic_btn_speak_now" />

    <TextView
        android:id="@+id/add_noise_record_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/record_noise_phrase"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add_noise_save_to_dict_textView"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_noise_speak_imgBtn"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/add_noise_save_to_dict_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="44dp"
        android:text="@string/save_to_dictionary"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_noise_dictionary_imgBtn"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/imgbtn_add_noise_tooltip"
        android:layout_width="31dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="17dp"
        android:contentDescription="@string/add_noise_tooltip_icon"
        android:onClick="displayNewNoiseTooltip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/add_noise_name_textbox"
        app:layout_constraintTop_toBottomOf="@+id/add_name_label"
        app:srcCompat="@android:drawable/ic_menu_help"
        />

</android.support.constraint.ConstraintLayout>